セレクタのタグ、id、class、擬似要素の挙動を確認

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  <div>
-    文字redにしました。
-  </div>
+  <div>ただのdiv</div>
+  <div class="wrapper">クラス付きのdiv</div>
+  <div id="one">id付きのdiv</div>
 </body>
 </html>
