複数指定と階層構造指定の練習

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <title>Document</title>
 </head>
 <body>
-  <div>ただのdiv</div>
-  <div class="wrapper">クラス付きのdiv</div>
-  <div id="one">id付きのdiv</div>
+  <div class="sample1">複数指定の練習</div>
+  <div class="sample2">複数指定の練習</div>
+
+  <div class="wrapper">
+    親要素
+    <p class="contents">階層構造指定の練習</p>
+  </div>
 </body>
 </html>
