よく使うプロパティの練習(文字、背景、余白系)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="sample1">複数指定の練習</div>
+  <div class="sample1"></div>
   <div class="sample2">複数指定の練習</div>
 
   <div class="wrapper">
