ヘッダーボタンの右側の実装

--- a/lp_reproduction/index.html
+++ b/lp_reproduction/index.html
@@ -8,6 +8,31 @@
   <title>Document</title>
 </head>
 <body>
+  <header>
+    <div class="lp-wrap header-wrapper">
+      <div class="nav-item-wrapper">
+        <a href=""><img src="./img/logo.png" alt=""></a>
+      </div>
+      <nav>
+        <ul class="nav-item-wrapper">
+          <li><a href="">ホーム</a></li>
+          <li><a href="">サービス案内</a></li>
+          <li><a href="">オンライン講座</a></li>
+          <li><a href="">会社概要</a></li>
+          <li><a href="">お問い合わせ</a></li>
+          <li><a href="">ブログ</a></li>
+        </ul>
+      </nav>
+      <div class="nav-item-wrapper">
+        <a class="header-btn-wrapper" href="">
+          <span>
+            お問い合わせはこちら
+          </span>
+          <span class="header-btn-right"></span>
+        </a>
+      </div>
+    </div>
+  </header>
   <div class="intro-container">
     <div class="lp-wrap">
       <div class="intro-wrapper">
