--- a/javascript/todo_list/index.html
+++ b/javascript/todo_list/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="input-area">
       <input placeholder="TODOを入力" />
-      <button>追加</button>
+      <button id="add-button">追加</button>
     </div>
     <div class="incomplete-todo-area">
       <p class="title">未完了のTODO</p>
