--- a/javascript/todo_list/index.html
+++ b/javascript/todo_list/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="input-area">
-      <input placeholder="TODOを入力" />
+      <input id="add-text" placeholder="TODOを入力" />
       <button id="add-button">追加</button>
     </div>
     <div class="incomplete-todo-area">
