--- a/javascript/todo_list/index.html
+++ b/javascript/todo_list/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="incomplete-todo-area">
       <p class="title">未完了のTODO</p>
-      <ul>
+      <ul id="incomplete-list">
         <li>
           <div class="li-wrapper">
             <p>ToDoです</p>
