未完了のリストから完了に移動するように実装

--- a/javascript/todo_list/index.html
+++ b/javascript/todo_list/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="complete-todo-area">
       <p class="title">完了のTODO</p>
-      <ul>
+      <ul id="complete-list">
         <li>
           <div class="li-wrapper">
             <p>ToDoです</p>
